# AirInk

./: .gitignore  LICENSE  README.md  airwrite_project_requirements_development_doc.md  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt
docs/: calibration_design.md  development_plan.md  release_checklist.md  testing_strategy.md
handconsole_adapter/: README.md
handconsole_adapter/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
handconsole_adapter/apps/desktop/src-tauri/src/: config.rs  frame.rs  lib.rs  session.rs  sidecar.rs
handconsole_adapter/docs/: architecture.md  current_status.md  development_plan.md  handconsole_integration_steps.md  handconsole_module_mapping.md  integration_contract.md  migration_from_airwrite.md
handconsole_adapter/python_sidecar_contract/: README.md  mock_sidecar.py
handconsole_adapter/scripts/: check.ps1  dev.ps1
scripts/: build_exe.ps1  reset_stable_config.ps1  run_app.ps1  run_tests.ps1  setup_dev_env.ps1
src/airwrite/: app.py  main.py
tests/: conftest.py
tests/integration/: test_camera_preview_session.py  test_drawing_session.py  test_handwriting_input_session.py  test_main_window_smoke.py
tests/packaging/: test_packaging_smoke.py
tests/unit/: test_camera_preview.py  test_canvas_widget.py  test_environment_contract.py  test_export_png.py  test_filters.py  test_gesture_state.py  test_hand_tracker_mapping.py  test_mapping.py  test_mock_camera_source.py  test_mock_serial_source.py  test_pen_pose.py  test_pinch_detector.py  test_relative_motion_mapper.py  test_session_controller.py  (+4 more)
(+55 files in other folders)
